@@ -1,5 +1,9 @@
 2010-12-08 S. Thiell <stephane.thiell@cea.fr>
 
+	* CLI/Nodeset.py: Support nodeset --split option (trac ticket #91).
+
+	* CLI/OptionParser.py: Add --split option (part of #91).
+
 	* NodeSet.py: Avoid overflow by returning truncated results when there are
 	not enough elements in the set for RangeSet.split(n) and NodeSet.split(n).
 
